<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/exodus_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/exodus_surface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
            app:title="@string/app_name"
            app:titleTextColor="@color/exodus_primary" />

        <TextView
            android:id="@+id/pathText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:paddingHorizontal="16dp"
            android:paddingBottom="8dp"
            android:singleLine="true"
            android:textColor="@color/exodus_muted"
            android:textIsSelectable="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/mottoBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingBottom="10dp"
            android:text="@string/motto"
            android:textColor="@color/exodus_secondary"
            android:textSize="11sp"
            android:fontFamily="sans-serif-italic" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fileList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="88dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/empty_folder"
        android:textColor="@color/exodus_muted"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabZip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:contentDescription="@string/action_zip"
        app:srcCompat="@drawable/ic_zip"
        app:backgroundTint="@color/exodus_primary"
        app:tint="@color/exodus_on_primary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
